# cinema-proj

./: .env  .env.example  .gitignore  docker-compose.yaml  pyproject.toml
alembic/: env.py
app/: alembic.ini  alembic.ini.example  main.py
app/alembic/: env.py
app/alembic/versions/: 81355c319f92_.py  92c6acec6e7d_.py  96681ee0d70d_add_refresh_token_and_upgrade_user.py  eae2b95df3a3_update_user.py
app/api/v1/: __init__.py  auth.py  dependencies.py
app/core/: __init__.py  config.py  database.py  dependencies.py  logger_config.py
app/core/alembic/versions/: 5ebd88541e49_create_table.py
app/crud/: __init__.py  refresh_token.py  user.py
app/models/: __init__.py  actor.py  favorites.py  film.py  genre.py  refresh_token.py  user.py  watch_history.py
app/models/association_tables/: film_actor.py  film_genre.py
app/schemas/: __init__.py  actor.py  favorites.py  film.py  refresh_token.py  user.py  watch_history.py
app/security/: jwt.py  password.py
app/services/: auth_service.py
