[project]
name = "cinema"
version = "0.1.0"
description = "cinema proj"
authors = [
    {name = "DageDarr",email = "tianakristian15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "redis (>=6.4.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
